# Q3B

./: .clang-format  .gitmodules  CMakeLists.txt  NEWS.md
app/: main.cpp
lib/: Approximated.cpp  Approximated.h  BDDInterval.cpp  BDDInterval.h  Config.h  ExprSimplifier.cpp  ExprSimplifier.h  ExprToBDDTransformer.cpp  ExprToBDDTransformer.h  HashUtils.h  HexHelper.h  Logger.cpp  Logger.h  Model.cpp  Model.h  SMTLIBInterpreter.cpp  SMTLIBInterpreter.h  SimplificationPass.h  Solver.cpp  Solver.h  TermConstIntroducer.cpp  TermConstIntroducer.h  UnconstrainedVariableSimplifier.cpp  UnconstrainedVariableSimplifier.h  UnionFind.cpp  VariableOrderer.cpp  VariableOrderer.h
lib/cudd/: bvec_cudd.cpp  bvec_cudd.h
lib/maybeBdd/: maybeBdd.cpp  maybeBdd.h
lib/simplificationPasses/: EqualityPropagator.cpp  EqualityPropagator.h  PureLiteralEliminator.cpp  PureLiteralEliminator.h
tests/: main.cpp  testUnconstrained.cpp
tests/catch/: catch.hpp
tests/data/: RND_3_14.smt2  btor2c-eagerMod.bakery.1.prop1-func-interl.c_0.smt2
